--- a/websocketsclient/src/main/resources/AuctionUI.fxml
+++ b/websocketsclient/src/main/resources/AuctionUI.fxml
@@ -3,7 +3,7 @@
 <?import java.lang.String?>
 <?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
@@ -42,7 +42,7 @@
                         <TextField fx:id="tfAmount" layoutX="203.0" layoutY="136.0" />
                         <TextField fx:id="tfStartingPrice" layoutX="203.0" layoutY="181.0" />
                         <Label layoutX="113.0" layoutY="224.0" text="Duur veilig" />
-                        <ChoiceBox fx:id="cbAuctionTimeHour" layoutX="203.0" layoutY="219.0" prefHeight="31.0" prefWidth="43.0">
+                        <ComboBox fx:id="cbAuctionTimeHour" layoutX="203.0" layoutY="219.0" prefHeight="31.0" prefWidth="43.0">
                             <items>
                                 <FXCollections fx:factory="observableArrayList">
                                     <String fx:value="0" />
@@ -54,8 +54,8 @@
                                     <String fx:value="6" />
                                 </FXCollections>
                             </items>
-                        </ChoiceBox>
-                        <ChoiceBox fx:id="cbAuctionTimeMinute" layoutX="285.0" layoutY="219.0" prefHeight="31.0" prefWidth="44.0">
+                        </ComboBox>
+                        <ComboBox fx:id="cbAuctionTimeMinute" layoutX="285.0" layoutY="219.0" prefHeight="31.0" prefWidth="44.0">
                             <items>
                                 <FXCollections fx:factory="observableArrayList">
                                     <String fx:value="0" />
@@ -72,9 +72,9 @@
                                     <String fx:value="55" />
                                 </FXCollections>
                             </items>
-                        </ChoiceBox>
-                        <Label layoutX="247.0" layoutY="224.0" text="Uur" />
-                        <Label layoutX="334.0" layoutY="224.0" text="Minuten" />
+                        </ComboBox>
+                        <Label layoutX="253.0" layoutY="224.0" text="Uur" />
+                        <Label layoutX="346.0" layoutY="224.0" text="Minuten" />
                      </children></AnchorPane>
                     </content>
                 </Tab>
