--- a/websocketsclient/src/main/resources/BuildingItemUI.fxml
+++ b/websocketsclient/src/main/resources/BuildingItemUI.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import javafx.scene.control.ComboBox?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.fhict.s3.websocketclient.controller.BuildingItemController">
     <children>
         <TabPane layoutX="7.0" prefHeight="400.0" prefWidth="593.0" tabClosingPolicy="UNAVAILABLE">
@@ -36,7 +37,7 @@
                                 <TextField fx:id="tfName" layoutX="203.0" layoutY="89.0" />
                                 <TextField fx:id="tfPrice" layoutX="203.0" layoutY="136.0" />
                                 <TextField fx:id="tfAmount" layoutX="203.0" layoutY="181.0" />
-                                <ChoiceBox fx:id="cbAuctionTimeHour" layoutX="203.0" layoutY="47.0" prefHeight="31.0" prefWidth="189.0" />
+                                <ComboBox fx:id="cbMaterialCategory" layoutX="203.0" layoutY="47.0" prefHeight="31.0" prefWidth="189.0" />
                             </children></AnchorPane>
                     </content>
                 </Tab>
